<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ime_name">Changjie Input Method</string>
    <string name="database_version" translatable="false">1</string>
    <string name="result_max" translatable="false">6</string>
    <string name="candidates_bottom_weight" translatable="false">3</string>
    <string name="pref_about">About</string>
    <string name="ime_version" translatable="false">2.0</string>
    <string name="setting_version_header">Changjie Version</string>
    <string name="setting_version_title">Use Version 5</string>
    <string name="setting_version_summary">Default is using Version 3</string>
    <string name="setting_filter_header">Additional Character Set</string>
    <string name="setting_filter_simplify_title">Simplify Chinese</string>
    <string name="setting_filter_simplify_summary">Enable Simplify Chinese</string>
    <string name="setting_quick_title">Enable Quick</string>
    <string name="setting_quick_summary">Enable Quick</string>
    <string name="setting_changjie_tradition_title">Enable Traditional Mode</string>
    <string name="setting_changjie_tradition_summary">Not to Show Auto Wildcard Search Results in typing Changjie</string>
    <string name="activity_setting_button">1. Enable in System Settings</string>
    <string name="activity_select_button">2. Select as Default Input Method</string>
    <string name="activity_info">To use Changjie Keyboard, complete the two steps below.</string>
    <string name="activity_status_enabled">✓ Changjie Keyboard is enabled</string>
    <string name="activity_status_disabled">✗ Changjie Keyboard is not enabled yet</string>
    <string name="action_settings">Settings</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="subtype_zh_hk">Traditional Chinese (Hong Kong)</string>
</resources>
