<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/ime_name">

    <PreferenceCategory
        android:key="choose_version"
        android:title="@string/setting_version_header">
        <CheckBoxPreference
            android:key="setting_version_5"
            android:summary="@string/setting_version_summary"
            android:title="@string/setting_version_title" />
        <CheckBoxPreference
            android:key="setting_quick"
            android:summary="@string/setting_quick_summary"
            android:title="@string/setting_quick_title" />
        <CheckBoxPreference
            android:key="setting_changjie_tradition"
            android:summary="@string/setting_changjie_tradition_summary"
            android:title="@string/setting_changjie_tradition_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="choose_filter"
        android:title="@string/setting_filter_header">
        <CheckBoxPreference
            android:key="setting_filter_simplify"
            android:summary="@string/setting_filter_simplify_summary"
            android:title="@string/setting_filter_simplify_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="choose_about"
        android:title="@string/pref_about">
        <Preference
            android:key="about"
            android:title="@string/pref_about"
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
